# run-as

./: .gitignore  Cargo.toml  README.md  upload-docs.sh
.cargo/: config.toml
.github/workflows/: tests.yml
examples/: cmd.rs  demo.rs  test_restart_self.rs
src/: impl_darwin.rs  impl_unix.rs  impl_windows.rs  lib.rs  restart_self.rs
