[package]
name = "runas"
version = "1.2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["runas", "sudo", "elevate", "elevated"]
description = "Run a command as root (sudo)"
homepage = "https://github.com/mitsuhiko/rust-runas"
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
which = "8.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.175"
security-framework-sys = "2.14.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
